--- a/style.css
+++ b/style.css
@@ -34,7 +34,8 @@
     font-family: SofiaSansExtraCondensed-Regular;
 }
 body{
-    background: #636363 ;
+    /* background: #636363 ; */
+    background: #000000 ;
 }
 
 /* HEADER */
@@ -46,6 +47,7 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-bottom: solid;
 }
 .logo{
     font-size: 50px;
@@ -80,6 +82,40 @@ header{
 #check{
     display: none;
 }
+
+/* Acerda de mi */
+.acercaMi{
+    height: 300px;
+}
+.acercaMi > .nombre h2{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 10px 0;
+    font-size: 60px;
+    color: whitesmoke;
+}
+.acercaMi > .nombre p{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-size: 30px;
+    color: whitesmoke;
+}
+.nombre p {
+    font-size: 30px;
+}
+.descripcion{
+    text-align: center;
+    font-size: 20px;
+    padding: 0 15% 0 15%;
+    font-size: 30px;
+    font-family: SofiaSansExtraCondensed-Italic;
+    color: #fff;
+}
+
+
+
 
 
 /* RESPONSIVE */
