Acerca de mi V2

--- a/style.css
+++ b/style.css
@@ -150,4 +150,8 @@ header{
     #check:checked ~ .menu{
         right: 0; /* El menu se muestra */
     }
+
+    .acercaMi > .nombre h2{
+        font-size: 60vh;
+    }
 }
